# gpt_from_scratch

./: .gitignore  .gitmodules  README.md  autoencoder_visualization_interpretability.ipynb  bracket_classifier_interp.ipynb  building_makemore.ipynb  custom_tokenization_tinystories.ipynb  days_of_the_week.ipynb  deriving_motivation_for_self_attention.ipynb  exploring_circuitsviz.ipynb  exploring_sae_steering.ipynb  hello_world.ipynb  initial_gpt2_optimization.ipynb  initial_gpt2_replication.ipynb  mypy.ini  nnsight_explorer.ipynb  notebook_template.ipynb  pyproject.toml  requirements.txt  sae_toy_circles.ipynb  simple_dictionary_learning.ipynb  simple_wandb.ipynb  toy_problem_hooked_transformer.ipynb  trying_sentencepiece_tokenization.ipynb  using-llama-405b-base.ipynb
Meta-Llama-3.1-405B-Instruct-FP8/: direction_metadata.json
colab/: arena_4_0_prereq_exercises  arena_4_0_prereq_exercises.ipynb  bigram_with_self_attention.ipynb  exploring_circuitsviz.ipynb  fine_tuning_qlora.ipynb  gpt2.ipynb  gpt2_tinystories_custom_tokenizer.ipynb  refusal_direction.ipynb  refusal_direction_405b.ipynb  refusal_direction_80b.ipynb  refusal_direction_8b.ipynb  refusal_direction_evaluation.ipynb  using_optuna_to_optimize_hyperparameters.ipynb
gpt_from_scratch/: bigram.py  bigram_with_self_attention.py  bigram_with_token_embeddings.py  byte_pair_encoding_tokenizer.py  dictionary_learning.py  file_utils.py  naive_tokenizer.py  plotly_utils.py  python_utils.py  sae.py  saved_model_identifier.py  serializable_activation_info.py  tensor_utils.py  timing_utils.py  tokenizer_utils.py  (+4 more)
(+57 files in other folders)
